--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,28 @@
         "sensio/framework-extra-bundle": "2.2.*",
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.3.*",
-        "jms/di-extra-bundle": "1.2.*"
+        "jms/di-extra-bundle": "1.2.*",
+
+        "twitter/bootstrap": "dev-master"
     },
+    "repositories": [
+       {
+           "type": "package",
+           "package": {
+               "version": "dev-master",
+               "name": "twitter/bootstrap",
+               "source": {
+                   "url": "https://github.com/twitter/bootstrap.git",
+                   "type": "git",
+                   "reference": "master"
+               },
+               "dist": {
+                   "url": "https://github.com/twitter/bootstrap/zipball/master",
+                   "type": "zip"
+                }
+           }
+       }
+    ],
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
