Update Symfony version to 2.4

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,10 @@
 imports:
     - { resource: config.yml }
 
+#framework:
+#    validation:
+#        cache: apc
+
 #doctrine:
 #    orm:
 #        metadata_cache_driver: apc
@@ -15,5 +19,7 @@ monolog:
             handler:      nested
         nested:
             type:  stream
-            path:  %kernel.logs_dir%/%kernel.environment%.log
+            path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
+        console:
+            type:  console
