--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,3 +1,8 @@
+_gui:
+    resource: "@GuiBundle/Controller/"
+    type:     annotation
+    prefix:   /gui
+
 _wdt:
     resource: "@WebProfilerBundle/Resources/config/routing/wdt.xml"
     prefix:   /_wdt
