--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "rgies/gui-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
