Add project name and version at config parameters and twig templates

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,6 +28,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        project: %project%
 
 # Assetic Configuration
 assetic:
