--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,6 +1,6 @@
 parameters:
     project.name:      MyApplication
-    project.version:   1.0
+    project.version:   "1.0"
 
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
