Add company name to parameters.yml.dist

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,7 +1,9 @@
 parameters:
     project_name:      MyApplication
     project_version:   '1.0'
-    contact_email:     contact@website.com
+
+    company_name:      MyCompany GmbH
+    company_email:     contact@mycompany.com
 
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
