--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,16 +23,16 @@ security:
             security: false
 
         secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: _security_check
-                login_path: _demo_login
+            pattern:    ^/
+            #form_login:
+            #    check_path: _security_check
+            #    login_path: _demo_login
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path:   logout
+                #target: _demo
+            anonymous: ~
+            http_basic:
+              realm: "Secured Demo Area"
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/login/, roles: ROLE_ADMIN }
