--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -3,6 +3,8 @@ parameters:
     platform_version:  '1.0'
     platform_vendor:   MyCompany GmbH
     platform_contact:  contact@website.com
+    platform_keywords: 'webportal,blog'
+    platform_description: 'This is my website with blog.'
 
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
