Add timezone to parameters

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,4 +19,5 @@ parameters:
     mailer_password:   ~
 
     locale:            en
+    timezone:          "Europe/Berlin"
     secret:            ThisTokenIsNotSoSecretChangeIt
