--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "config": {
         "bin-dir": "bin"
     },
+    "minimum-stability": "stable",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
@@ -58,7 +59,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "lts"
+            "dev-master": "lts-dev"
         }
     }
 }
