--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -17,17 +17,12 @@ monolog:
             type:  stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
-        console:
-            type:   console
-            bubble: false
-        # uncomment to get logging in your browser
-        # you may have to allow bigger header sizes in your Web server configuration
-        #firephp:
-        #    type:   firephp
-        #    level:  info
-        #chromephp:
-        #    type:   chromephp
-        #    level:  info
+        firephp:
+            type:  firephp
+            level: info
+        chromephp:
+            type:  chromephp
+            level: info
 
 assetic:
     use_controller: true
